# sqlstream

./: .gitignore  404.html  =0.27.0  README.md  SQLStream - Implementation Plan.md  SQLStream - Technical Design Document.md  demo.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  test.ipynb  test_shell_components.py
.github/workflows/: docs.yml  tests.yml
api/advanced/: index.html
api/guides/advanced/: index.html
api/overview/: index.html
api/query/: index.html
api/readers/: index.html
api/reference/cli/: index.html
api/reference/operators/: index.html
api/reference/optimizers/: index.html
api/reference/query/: index.html
api/reference/readers/: index.html
api/reference/sql/: index.html
api/reference/types/: index.html
api/reference/utils/: index.html
architecture/design/: index.html
architecture/optimizations/: index.html
architecture/volcano-model/: index.html
cli-tool/examples/bash-scripts/: index.html
cli-tool/output-formats/: index.html
cli-tool/overview/: index.html
cli-tool/query-command/: index.html
cli-tool/quickstart/: index.html
cli-tool/scripting-patterns/: index.html
cli/interactive-mode/: index.html
cli/output-formats/: index.html
cli/overview/: index.html
cli/query-command/: index.html
contributing/: index.html
docs/: contributing.md  faq.md  index.md  limitations.md  performance.md  troubleshooting.md
docs/api/: overview.md  query.md  readers.md
docs/architecture/: design.md  optimizations.md
docs/cli/: interactive-mode.md  overview.md  query-command.md
docs/cli-tool/: output-formats.md  overview.md  quickstart.md  scripting-patterns.md
docs/examples/: aggregations.md  basic-queries.md  duckdb-backend.md  html-tables.md  joins.md  json-data.md  markdown-tables.md  parquet-files.md  real-world.md  xml-data.md
docs/features/: advanced-formats.md  aggregations.md  data-sources.md  duckdb-backend.md  http-reader.md  inline-paths.md  joins.md  pandas-backend.md  s3-support.md  sql-support.md  type-system.md  xml.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md
docs/guides/: faq.md  performance.md  troubleshooting.md  which-mode.md
docs/interactive-shell/: interface-guide.md  keyboard-shortcuts.md  quickstart.md  workflows.md
docs/python-module/: advanced-patterns.md  basic-usage.md  quickstart.md
docs/reference/: limitations.md  url-fragments.md
docs/stylesheets/: extra.css
examples/: api_logs.json  complex2.html  demo_data.xml  departments.csv  employees.csv  employees.parquet  json_nested_paths.py  orders.csv  products.json  sales.parquet  sample_data.md  simple.html
examples/aggregations/: index.html
examples/basic-queries/: index.html
examples/duckdb-backend/: index.html
examples/html-tables/: index.html
examples/joins/: index.html
examples/json-data/: index.html
examples/markdown-tables/: index.html
examples/parquet-files/: index.html
examples/real-world/: index.html
examples/xml-data/: index.html
faq/: index.html
features/advanced-formats/: index.html
features/aggregations/: index.html
features/data-sources/: index.html
features/duckdb-backend/: index.html
features/http-reader/: index.html
features/inline-paths/: index.html
features/joins/: index.html
features/pandas-backend/: index.html
features/s3-support/: index.html
features/sql-support/: index.html
features/type-system/: index.html
features/xml/: index.html
getting-started/core-concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/contributing/: index.html
guides/faq/: index.html
guides/performance/: index.html
guides/troubleshooting/: index.html
guides/which-mode/: index.html
interactive-shell/interface-guide/: index.html
interactive-shell/keyboard-shortcuts/: index.html
interactive-shell/quickstart/: index.html
interactive-shell/workflows/: index.html
limitations/: index.html
performance/: index.html
python-module/advanced-patterns/: index.html
python-module/basic-usage/: index.html
python-module/quickstart/: index.html
reference/limitations/: index.html
reference/url-fragments/: index.html
scripts/: README.md  generate_api_docs.py  publish.py
search/: search_index.json
sqlstream/: __init__.py  __main__.py
sqlstream/cli/: __init__.py  interactive.py  main.py  shell.py
sqlstream/core/: duckdb_executor.py  executor.py  fragment_parser.py  pandas_executor.py  planner.py  query.py  types.py
sqlstream/operators/: base.py  filter.py  groupby.py  join.py  limit.py  orderby.py  project.py  scan.py
sqlstream/optimizers/: README.md  __init__.py  base.py  column_pruning.py  cost_based.py  join_reordering.py  limit_pushdown.py  partition_pruning.py  planner.py  predicate_pushdown.py  projection_pushdown.py
sqlstream/readers/: base.py  csv_reader.py  html_reader.py  http_reader.py  json_reader.py  jsonl_reader.py  markdown_reader.py  parallel_reader.py  parquet_reader.py  xml_reader.py
sqlstream/sql/: ast_nodes.py  parser.py
sqlstream/utils/: aggregates.py
stylesheets/: extra.css
tests/: conftest.py  test_basic.py
tests/test_cli/: __init__.py  test_formatters.py  test_inline_cli.py  test_interactive.py  test_main.py  test_shell.py
tests/test_core/: test_duckdb_executor.py  test_enhanced_types.py  test_executor.py  test_fragment_parser.py  test_pandas_backend.py  test_query.py  test_query_inline.py  test_types.py
tests/test_integration/: test_enhanced_types_integration.py
tests/test_operators/: test_groupby_orderby.py  test_join.py  test_operators.py
tests/test_optimizers/: test_planner.py
tests/test_readers/: test_csv_reader.py  test_html_reader.py  test_http_reader.py  test_json_fragment.py  test_json_nested_paths.py  test_json_reader.py  test_jsonl_reader.py  test_markdown_reader.py  test_parquet_reader.py  test_s3_support.py  test_schema_inference.py  test_xml_reader.py
tests/test_sql/: test_parser.py
tests/test_utils/: test_aggregates.py
troubleshooting/: index.html
(+14 files in other folders)
